Fix margin in about page collapse

--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,7 +1,7 @@
-.aboutCollpse {
+.aboutCollapse {
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 38px;
   max-width: 1240px;
   width: 86%;
@@ -11,7 +11,7 @@
 @media screen and (max-width: 800px) {
   .aboutCollpse {
     width: 86%;
-    margin: 0;
+    margin: 0 auto 0 auto;
     padding: 19px 0;
     gap: 20px;
   }
